.metadata/.plugins/org.eclipse.cdt.ui/negativeorposative.build.log
00:11:37 **** Incremental Build of configuration Debug for project negativeorposative ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\negativeorposative.o" "..\\src\\negativeorposative.c" 
..\src\negativeorposative.c: In function 'main':
..\src\negativeorposative.c:15:21: error: expected ';' before 'printf'
  setbuf(stdout,NULL)
                     ^
                     ;
  printf("Enter a number");
  ~~~~~~              
..\src\negativeorposative.c:17:14: error: 'num' undeclared (first use in this function)
  scanf("%d",&num);
              ^~~
..\src\negativeorposative.c:17:14: note: each undeclared identifier is reported only once for each function it appears in

00:11:38 Build Failed. 2 errors, 0 warnings. (took 289ms)

